split the tabs.

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,7 @@
 {
-  "hosting": {
-    "source": ".",
-    "cleanUrls": true,
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+    "hosting": {
+        "source": ".",
+        "cleanUrls": true,
+        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    }
 }
