Now, can the translate.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "damoa7989",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "firebase": "^9.9.3",
-    "next": "^12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.54.5"
-  },
-  "devDependencies": {
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
-  }
+    "name": "damoa7989",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "update:locale": "node ./scripts/updateLocale.js"
+    },
+    "dependencies": {
+        "firebase": "^9.9.3",
+        "i18next": "^21.9.1",
+        "i18next-browser-languagedetector": "^6.1.5",
+        "next": "^12.2.5",
+        "next-i18next": "^12.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "sass": "^1.54.5"
+    },
+    "devDependencies": {
+        "eslint": "8.22.0",
+        "eslint-config-next": "12.2.5",
+        "google-spreadsheet": "^3.3.0"
+    }
 }
