--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "next": "^12.2.5",
         "next-i18next": "^12.0.0",
         "next-language-detector": "^1.0.2",
+        "nodemailer": "^6.7.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "sass": "^1.54.5"
