--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "next": "^12.2.5",
         "next-i18next": "^12.0.0",
         "next-language-detector": "^1.0.2",
+        "next-seo": "^5.5.0",
         "nodemailer": "^6.7.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
